Texture painting: Texture slots that correspond to nodes inside node_groups don't remain active #67597

Closed
opened 2019-07-24 17:24:44 +02:00 by who cares · 13 comments

System Information
https://pastebin.com/vVYLjhDR

Blender Version
https://pastebin.com/np7dW1d1

Short description of error
in texture paint, when trying to paint on a image included into a node group, texture switches to another after changing the brush radius (or after using shortcut key 'F')

Exact steps for others to reproduce the error

  1. Open attached file;
  2. In the sidebar with Tool properties, click tex1 and then tex2;
  3. Do any operation (F, select ...);
  4. See how tex1 becomes active.

attachment
2 images are packed into .blend file
untitled.blend

**System Information** https://pastebin.com/vVYLjhDR **Blender Version** https://pastebin.com/np7dW1d1 **Short description of error** in texture paint, when trying to paint on a image included into a node group, texture switches to another after changing the brush radius (or after using shortcut key 'F') **Exact steps for others to reproduce the error** 1. Open attached file; 2. In the sidebar with Tool properties, click `tex1` and then `tex2`; 3. Do any operation (F, select ...); 4. See how `tex1` becomes active. **attachment** 2 images are packed into .blend file [untitled.blend](https://archive.blender.org/developer/F7626767/untitled.blend)
Author

Added subscriber: @soundsbeard

Added subscriber: @soundsbeard
who cares changed title from texture painting. switching textures while painting on a texture from node group after brush radius change to texture painting. switching textures after brush radius change while painting on a texture from node group 2019-07-24 17:30:56 +02:00

Added subscriber: @mano-wii

Added subscriber: @mano-wii

I can't reproduce this problem.
Can you describe the steps from the attached file?

I can't reproduce this problem. Can you describe the steps from the attached file?
Author

This comment was removed by @soundsbeard

*This comment was removed by @soundsbeard*
Author

In #67597#733906, @mano-wii wrote:
I can't reproduce this problem.
Can you describe the steps from the attached file?

try to draw something on 'tex1' slot or just click on 'tex1' slot and back to 'tex2' slot .
the problem should show up.

https://youtu.be/BAGWswzT4Ys

> In #67597#733906, @mano-wii wrote: > I can't reproduce this problem. > Can you describe the steps from the attached file? try to draw something on 'tex1' slot or just click on 'tex1' slot and back to 'tex2' slot . the problem should show up. https://youtu.be/BAGWswzT4Ys
Germano Cavalcante self-assigned this 2019-07-24 21:21:07 +02:00
Germano Cavalcante changed title from texture painting. switching textures after brush radius change while painting on a texture from node group to Texture painting: Texture slots that correspond to nodes inside node_groups don't remain active 2019-07-25 00:22:22 +02:00

This issue was referenced by bc42092a7d

This issue was referenced by bc42092a7ddbc888e1bc3ef74caeb0140037c560

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

@mano-wii, tested on both released and 2.81 alpha build (july 30), the problem still exists

@mano-wii, tested on both released and 2.81 alpha build (july 30), the problem still exists

Added subscriber: @brecht

Added subscriber: @brecht

This was fixed less than 2 hours ago, there is no build yet.

This was fixed less than 2 hours ago, there is no build yet.
Author

Added subscriber: @Brecert

Added subscriber: @Brecert
Author

@Brecert oh, got it, thank you for the reply

@Brecert oh, got it, thank you for the reply
Author

build
version: 2.81 (sub 0), branch: master, commit date: 2019-08-01 10:32, hash: 5fde4494f6, type: Release
build date: 2019-08-01, 12:53:48

it works with 2 images in the material but doesn't work with 3 or more images
untitled2.blend

build version: 2.81 (sub 0), branch: master, commit date: 2019-08-01 10:32, hash: 5fde4494f654, type: Release build date: 2019-08-01, 12:53:48 it works with 2 images in the material but doesn't work with 3 or more images [untitled2.blend](https://archive.blender.org/developer/F7642213/untitled2.blend)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67597
No description provided.